--- a/M2-D4.html
+++ b/M2-D4.html
@@ -39,7 +39,9 @@
         <label for="listOfNames">List of players</label>
         <textarea class="form-control" id="listOfNames" rows="3"></textarea>
         <input id="numberOfTeams" type="number" min="1">
-        <button>Generate Teams</button>
+        <input type="button" onclick="generateTeams()" value="generateTeams">
+        <input type="button" onclick="generatePlayerList()" value="playerList">
+        <input type="button" onclick="assignPlayer()" value="assignPlayer">
       </div>
     </form>
       <div class="container">
